--- a/project.html
+++ b/project.html
@@ -1,39 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chickenWorld</title>
+    <title>KRUSTY KRAB</title>
 </head>
 <body style="background-image: url(https://cdnb.artstation.com/p/assets/images/images/040/302/413/large/oliver-bullock-krusty-krab-night-time.jpg?1628463485);">
-    <h1 style="color: rgb(0, 204, 255)">Welcome to Chicken World</h1>
-    <H3 style="color: rgb(0, 204, 255)">To start and have the best chicken experience you are requierd to sign in </H3>
+    <h1 id="first_h1">KRUSTY KRAB INTERNATIONAL
+    <style>
+        #first_h1 {
+            background-color: rgb(185, 0, 145);
+            color: rgb(138, 30, 50);
+width: 300px;
+        }
+    </style>
+    </h1>
+    <H3 id="first_h3">To start having the BEST meals deliverd to you please sign up 
+    <style>
+#first_h3 {
+background-color: blueviolet;
+color: brown;
+width: 500px;   
+}
+    </style>
+    </h3>
     <hr>
     <br>
-    <input type="email">  Email
+    <p></p>
+    <center>
+     <h4 id="h4_1" style="color: rgb(255, 0, 242)">Email: 
+    <style>
+        #h4_1 {
+            background-color: cyan;
+            width: 50px;
+        }
+    </style>
+    </h4><input type="email" style="color: rgb(0, 0, 0)" >  
      <br>
      <p></p>
-     <input type="password">  Password                                                      
+     <h4 id="h4_2" style="color: rgb(242, 0, 255)">Password:
+        <style>
+            #h4_2 {
+                background-color: cyan;
+                width: 72px;
+            }
+        </style>
+    </h4><input type="password" style="color: rgb(0, 0, 0)" >                                                  
      <br>
      <p></p>
-     <input type="date">  Birthday                
+     <h4 id="h4_3" style="color: rgb(255, 0, 204)">Address:
+       <style>
+            #h4_3 {
+                background-color: cyan;
+                width: 80px;
+            }
+        </style>
+    </h4> <input type="text" style="color: rgb(0, 0, 0)">             
      <br>
      <p></p>
-     <button>Sign me up!</button>
+     <button id="button_1">Sign me up!
+    <style>
+#button_1 {
+ color: rgb(0, 195, 255);
+    background-color: rgb(255, 0, 225);
+}
+    </style>
+    </button>
      <br>
-     <p>Follow us on social media!</p>
+     <p id="p_1" style="color: rgb(0, 0, 0)" >Follow us on social media!
+        <style>
+            #p_1 {
+                background-color: rgb(0, 255, 255);
+                width: 200px;
+            }
+        </style>
+    </p> 
      <br>
-     <a target="_blank" href="https://www.youtube.com"><img src="https://freepngimg.com/download/youtube/24980-9-youtube-transparent-background.png"
-        width="10%" height="10%"
+     <a target="_blank" href="https://www.youtube.com/watch?v=67hw7hj_xkc"><img src="https://freepngimg.com/download/youtube/24980-9-youtube-transparent-background.png"
+        width="4%" height="4%"
         alt=""></a>
-     <a target="_blank" href="https://www.instagram.com"><img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c521.png" 
-        width="15%" height="15%"
+     <a target="_blank" href="https://www.instagram.com/p/CvDF6o1Kg7X/"><img src="https://assets.stickpng.com/thumbs/580b57fcd9996e24bc43c521.png" 
+        width="4%" height="4%"
         alt=""></a>
-        <a target="_blank" href="https://twitter.com"><img src="https://media.tenor.com/-TPrzN8pfJQAAAAC/good-twitter.gif" 
-        width="15%" height="15%"
+        <a target="_blank" href="https://twitter.com/SpongeBobMemesZ/status/1281114465430355969/photo/1"><img src="https://e7.pngegg.com/pngimages/767/32/png-clipart-logo-computer-icons-twitter-miscellaneous-television-thumbnail.png" 
+        width="4%" height="4%"
             alt=""></a>
-            <a target="_blank" href="http://www.nick.co.il"><img src="https://media.tenor.com/nJMGfZDwMWcAAAAi/nickelodeon-nickelodeon-logo.gif"
-                width="15%" height="15%"
+            <a target="_blank" href="http://www.nick.co.il/video/18977"><img src="https://media.tenor.com/nJMGfZDwMWcAAAAi/nickelodeon-nickelodeon-logo.gif"
+                width="4%" height="4%"
                 alt=""></a>
+            </center>
 </body>
 </html>
